Some improvements and README have been added